# Warden_monorepo

./: .gitignore  .npmrc  .prettierignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/tooling/: .gitignore  README.md  description.md  package.json  pyproject.toml  requirements.txt  wardentooling.py
apps/tooling/_bmad-output/: project-sprint.md
apps/tooling/_bmad-output/implementation-artifacts/: tech-spec-auto-hsv-from-drawn-roi.md  tech-spec-black-screen-detector.md  tech-spec-bsd-dual-state-detection.md  tech-spec-bsd-neutral-start-vertical-roi.md  (+17 more)
apps/tooling/config/: config.yaml
apps/tooling/docs/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  roi-detection-method.md  source-tree-analysis.md
apps/tooling/tests/: conftest.py  test_auto_roi_discoverer.py  test_common_labeled_dataset.py  test_map_config_emitter.py  test_overlay_stack_analyzer.py  test_roi_detection_tester.py  test_video_detection_tester.py  test_video_timeline_labeler.py  test_zone_picker.py
apps/tooling/tools/: auto_roi_discoverer.md  black_screen_detector.py  bsd_roi_debugger.py  frame_labeler.py  game_detector.py  hash_comparator.py  hash_validator.py  map_config_emitter.py  map_config_generator.py  overlay_stack_analyzer.md  overlay_stack_analyzer.py  points_state_detector.py  roi_detection_tester.md  roi_detection_tester.py  video_test.py  video_timeline_labeler.md  video_timeline_labeler.py  warden_analyzer.py
apps/tooling/utils/: config.py  format.py  image.py  video.py
(+449 files in other folders)
