[project]
name = "warden-monorepo"
version = "0.0.0"
description = "Root Python project for Warden monorepo. Per-app Python deps live in apps/*/pyproject.toml."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
]

[tool.uv.workspace]
members = ["apps/tooling"]

[tool.uv]
package = false
