[project]
name = "warden-tooling"
version = "0.0.0"
description = "Warden desktop video analysis pipeline. Validates detection algorithms and emits map_config.json consumed by the mobile app."
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8,<5",
    "pyyaml>=6.0,<7",
    "numpy>=1.24,<2",
    "imagehash>=4.2,<5",
    "questionary>=2.0,<3",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
